# SimpleAMQP

./: pyproject.toml
src/: __init__.py  base.py
